# memoirr

./: .gitignore  AGENTS.md  MEMORY.md  README.md  architect_prompt.md  design.md  implementation.md  launch_chat.py  model_selection.md  pyproject.toml  tests.ipynb
docs/: README.md  database_population_strategies.md  enterprise_rag.txt  frontend_comparison.md  future_development.md  future_development_academic.md  qwen.md  testing_guide.md
docs/coding_standards/: logging_guide.md  testing_guide.md
docs/sprints/: evaluation_framework_sprint.md
src/components/: README.md
src/components/chunker/: README.md  __init__.py  semantic_chunker.py
src/components/embedder/: README.md  __init__.py  text_embedder.py
src/components/generator/: groq_generator.py
src/components/metadata/: __init__.py  metadata_service.py  plex_client.py  radarr_client.py  tmdb_client.py
src/components/preprocessor/: README.md  __init__.py  (+1 more)
src/core/: README.md  __init__.py  config.py  logging_config.py  memory_utils.py  model_utils.py
src/database_population/: README.md  __init__.py  batch_processor.py  example_usage.py
src/evaluation/: README.md  __init__.py  haystack_evaluator.py  test.ipynb
src/frontend/: README.md  __init__.py  gradio_app.py
src/pipelines/: README.md  __init__.py  rag_pipeline.py  srt_to_qdrant.py
src/prompts/: README.md  default_system.j2  template_loader.py
src/tools/: README.md  __init__.py  validate_config.py
test/: conftest.py
test/components/: test_v1_types.py
test/core/: test_config_validation.py  test_env_propagation.py  test_v1_config.py
test/database_population/: README.md  conftest.py  run_tests.py  test_batch_processor.py  test_integration.py  test_qdrant_writer_integration.py  test_utils.py
test/evaluation/: __init__.py  conftest.py  test_haystack_evaluator.py
test/frontend/: __init__.py  conftest.py  test_device_selection_fix.py
test/pipelines/: test_pipeline_connect_embedder_chunker.py  test_pipeline_connectivity.py  test_pipeline_glue_components.py  test_rag_integration.py  test_rag_pipeline.py  test_retrieval_pipeline_connectivity.py  test_srt_to_qdrant_pipeline.py
test/tools/: __init__.py  test_validate_config.py
(+120 files in other folders)
