[project]
name = "memoirr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chonkie[all,qdrant]>=1.2.1",
    "fastembed>=0.7.3",
    "groq>=0.31.1",
    "haystack>=0.42",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langdetect>=1.0.9",
    "plexapi>=4.17.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "qdrant-haystack>=9.2.0",
    "sentence-transformers>=5.1.0",
    "srt>=3.5.3",
    "structlog>=24.1.0",
]
