[project]
name = "memoirr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.35.0",
    "bitsandbytes>=0.49.1",
    "chonkie[all,qdrant]>=1.2.1",
    "fastembed>=0.7.3",
    "gradio>=4.0.0",
    "groq>=0.31.1",
    "guessit>=3.8.0",
    "haystack-ai[all]>=2.17.1",
    "insightface>=0.7.3",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.0",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.6",
    "onnxruntime-gpu>=1.23.2",
    "opencv-python>=4.10.0",
    "pillow>=11.0.0",
    "plexapi>=4.17.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "qdrant-haystack>=9.2.0",
    "qwen-vl-utils>=0.0.8",
    "requests>=2.32.0",
    "scenedetect[opencv]>=0.6.4",
    "sentence-transformers>=5.1.0",
    "srt>=3.5.3",
    "structlog>=24.1.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.56.1",
]
